[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Captura de tela 2022-02-22 144254.png" type="Texture" id=1]
[ext_resource path="res://start.gd" type="Script" id=2]
[ext_resource path="res://assets/pkmnfl.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Captura de tela 2022-02-22 144254.png" type="Texture" id=4]
[ext_resource path="res://quit.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 3 )

[node name="menu" type="Node2D"]

[node name="start" type="Button" parent="."]
margin_left = 320.0
margin_top = 256.0
margin_right = 704.0
margin_bottom = 320.0
rect_pivot_offset = Vector2( 3, 4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="start"]
position = Vector2( 192, 32 )
scale = Vector2( 0.30233, 0.139986 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="start"]
margin_left = 136.0
margin_top = 16.0
margin_right = 248.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 376.0
margin_top = 96.0
margin_right = 653.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 2 )
text = "Fa√ßa-me rico!!"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="."]
margin_left = 320.0
margin_top = 384.0
margin_right = 704.0
margin_bottom = 448.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="quit"]
position = Vector2( 192, 32 )
scale = Vector2( 0.298833, 0.12749 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="quit"]
margin_left = 148.0
margin_top = 12.0
margin_right = 235.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 3 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="start" to="start" method="_on_start_mouse_entered"]
[connection signal="mouse_exited" from="start" to="start" method="_on_start_mouse_exited"]
[connection signal="pressed" from="start" to="start" method="_on_start_pressed"]
[connection signal="pressed" from="quit" to="quit" method="_on_quit_pressed"]
